--- a/css/style.css
+++ b/css/style.css
@@ -3,20 +3,20 @@ body {
   line-height: 24px;
   color: #000000;
   font-weight: bold;
-  font-family: "PT Sans Narrow";
+  font-family: "PT Sans Narrow", Arial, Helvetica, sans-serif;
   text-transform: uppercase;
 }
 h2 {
   font-size: 30px;
-  line-height: normal;
+  line-height: 36px;
   color: #000000;
   font-weight: bold;
-  font-family: "PT Sans Narrow";
+  font-family: "PT Sans Narrow", Arial, Helvetica, sans-serif;
 }
 h3 {
   font-size: 24px;
-  line-height: normal;
+  line-height: 29px;
   color: #000000;
   font-weight: bold;
-  font-family: "PT Sans Narrow";
+  font-family: "PT Sans Narrow", Arial, Helvetica, sans-serif;
 }
