--- a/css/style.css
+++ b/css/style.css
@@ -16,14 +16,16 @@ body {
   font-family: "PT Sans Narrow", "Arial", sans-serif;
   color: #ffffff;
   text-transform: uppercase;
+  background-size: 1200px auto;
+  background: #000000 url("../img/body-bg.jpg") no-repeat center top;
+}
 
-  background: url("../img/_barbershop-shop.png") no-repeat 50% 0;
-  /*background-size: 1200px auto;  background: #000000 url("../img/body-bg.jpg") no-repeat center top;*/
+.second-page {
+  background: url("../img/bg-page.png") repeat 0 0;
 }
 
 .clearfix::after {
   content: "";
-
   display: table;
   clear: both;
 }
@@ -81,7 +83,8 @@ body {
   border-bottom: 4px solid #ffffff;
 }
 
-.main-navigation a:hover {
+.main-navigation a:hover,
+.main-navigation .active:hover {
   background: #242424;
 }
 
@@ -117,8 +120,8 @@ body {
   width: 18px;
   height: 18px;
 
-  background: transparent url("img/sprite.png") no-repeat;
-  background-position: -1px -15px;
+  background: transparent url("../img/sprite.png") no-repeat;
+  background-position: -10px -10px;
   opacity: 0.3;
 }
 
@@ -392,7 +395,7 @@ body {
   vertical-align: top;
   text-decoration: none;
 
-  background: #000000 url("img/sprite.png") no-repeat center;
+  background: #000000 url("../img/sprite.png") no-repeat center;
 
   transition:
     background-position 0.5s,
@@ -404,27 +407,27 @@ body {
 }
 
 .social-btn-vk {
-  background-position: 9px -447px;
+  background-position: 0 -274px;
 }
 
 .social-btn-fb {
-  background-position: 15px -171px;
+  background-position: 5px -108px;
 }
 
 .social-btn-inst {
-  background-position: 12px -313px;
+  background-position: 3px -192px;
 }
 
 .social-btn-vk:hover {
-  background-position: 9px -381px;
+  background-position: 0 -310px;
 }
 
 .social-btn-fb:hover {
-  background-position: 15px -100px;
+  background-position: 5px -150px;
 }
 
 .social-btn-inst:hover {
-  background-position: 12px -242px;
+  background-position: 3px -233px;
 }
 
 .footer-copyright p {
@@ -460,7 +463,7 @@ body {
 }
 
 .breadcrumbs{
-  margin-bottom: 40px;
+  margin-bottom: 48px;
   padding: 0;
   font-size: 0;
 
@@ -477,7 +480,20 @@ body {
   color: #aba9a7;
 }
 
+.breadcrumbs a::after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 3px;
+  right: -23px;
+  width: 8px;
+  height: 8px;
+  background-color: #000000;
+  transform: rotate(45deg);
+}
+
 .breadcrumbs a {
+  position: relative;
   color: #000000;
   text-decoration: none;
 }
@@ -485,6 +501,7 @@ body {
 .shop-content-left {
   width: 220px;
   float: left;
+  margin-top: -8px;
 
   /* Только для оформления сетки */
   outline: 2px solid blue;
@@ -545,9 +562,7 @@ body {
 
 .products {
   margin-bottom: 25px;
-
   font-size: 0;
-
 }
 
 .item {
@@ -568,6 +583,18 @@ body {
   margin-right: 0;
 }
 
+.item img {
+  display: block;
+}
+
+.item p {
+  margin-bottom: 12px;
+  margin-top: 12px;
+  padding-left: 16px;
+  font-size: 14px;
+  line-height: 18px;
+}
+
 .product-name {
   color: #000000;
   text-decoration: none;
@@ -575,6 +602,10 @@ body {
 }
 
 .buy {
+  width: 187px;
+  margin-left: 16px;
+  margin-right: 16px;
+  margin-bottom: 16px;
 
   /* Только для оформления сетки */
   outline: 2px solid magenta;
@@ -583,9 +614,20 @@ body {
 .price {
   float: left;
   width: 109px;
+  padding: 10px 0;
+  text-align: center;
+  font-size: 14px;
+  line-height: 24px;
+  color: #000000;
 
   /* Только для оформления сетки */
   outline: 2px solid yellow;
+}
+
+.buy .btn {
+  float: right;
+  margin: 0;
+  padding: 10px 17px;
 }
 
 .pages {
@@ -597,12 +639,33 @@ body {
 
 .page {
   float: left;
-  height: 44px;
   width: 44px;
   margin-right: 6px;
+  list-style: none;
+  text-align: center;
+  background-color: #000000;
 
   /* Только для оформления сетки */
   outline: 2px solid red;
+}
+
+.page a {
+    display: block;
+    height: 24px;
+    width: 44px;
+    padding: 10px 0;
+    color: #ffffff;
+    font-size: 14px;
+    line-height: 24px;
+    text-decoration: none;
+}
+
+.active-page {
+  color: #000000;
+  padding: 10px 0;
+  font-size: 14px;
+  line-height: 24px;
+  background-color: #ffffff;
 }
 
 /*!!!!!!!!!!!!!!!!!!!!!barbershop-item.html!!!!!!!!!!!!!!!!*/
@@ -648,15 +711,15 @@ body {
 }
 
 .product-info {
-  margin-bottom: 65px;
+  margin-bottom: 63px;
 
   /* Только для оформления сетки */
   outline: 2px solid yellow;
 }
 
 .availability {
-padding-top: 27px;
-margin-bottom: 38px;
+padding-top: 19px;
+margin-bottom: 28px;
 
   /* Только для оформления сетки */
   outline: 2px solid red;
@@ -666,6 +729,7 @@ margin-bottom: 38px;
   float: left;
   padding: 0;
   margin: 0;
+  color: #000000;
 
   /* Только для оформления сетки */
   outline: 2px solid yellow;
@@ -674,8 +738,42 @@ margin-bottom: 38px;
 .description .right {
   float: right;
   padding: 0;
+  padding-right: 10px;
   margin: 0;
+  color: #aeaeae;
 
   /* Только для оформления сетки */
   outline: 2px solid yellow;
+}
+
+.product-info > p {
+  margin-bottom: 36px;
+  color: #000000;
+}
+
+.product-info .buy {
+  margin: 0;
+}
+
+.set {
+  margin-top: 28px;
+  list-style: none;
+  padding-left: 20px;
+  color: #000000;
+}
+
+.set li {
+  position: relative;
+}
+
+.set li::before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 7px;
+  left: -17px;
+  width: 8px;
+  height: 8px;
+  transform: rotate(45deg);
+  background-color: #000000;
 }
