--- a/css/style.css
+++ b/css/style.css
@@ -101,9 +101,7 @@ body {
 .main-header {
   margin-bottom: 55px;
   padding-top: 3px;
-
   color: #ffffff;
-
   background-color: #000000;
 }
 
@@ -115,14 +113,12 @@ body {
 .main-navigation ul {
   margin: 0;
   padding: 0;
-
   list-style: none;
   font-size: 0;
 }
 
 .main-navigation li {
   display: inline-block;
-
   font-size: 16px;
   line-height: 20px;
   vertical-align: top;
@@ -131,7 +127,6 @@ body {
 .main-navigation a {
   display: block;
   padding: 25px 20px;
-
   color: #ffffff;
   text-decoration: none;
 }
@@ -158,11 +153,9 @@ body {
 
 .login {
   position: relative;
-
   display: inline-block;
   padding: 25px 20px;
   padding-left: 50px;
-
   font-size: 16px;
   line-height: 20px;
   vertical-align: top;
@@ -179,10 +172,8 @@ body {
   position: absolute;
   top: 28px;
   left: 20px;
-
   width: 18px;
   height: 18px;
-
   background: transparent url("../img/sprite.png") no-repeat;
   background-position: -10px -10px;
   opacity: 0.3;
@@ -212,7 +203,6 @@ body {
   float: left;
   width: 300px;
   margin-right: 20px;
-
   text-align: center;
 }
 
@@ -222,11 +212,9 @@ body {
 
 .features-name {
   position: relative;
-
   display: block;
   margin-bottom: 30px;
   padding-bottom: 35px;
-
   font-size: 30px;
   line-height: 42px;
 }
@@ -254,9 +242,7 @@ body {
 .index-content {
   margin-bottom: 35px;
   padding: 50px 80px;
-
   color: #000000;
-
   background: url("../img/index-content-shadow.png") no-repeat center,
   #f8f5f2 url("../img/pattern-white.png");
 }
@@ -308,7 +294,6 @@ body {
   display: inline-block;
   margin-right: 16px;
   padding: 10px 33px;
-
   font-weight: 700;
   font-size: 14px;
   line-height: 24px;
@@ -318,7 +303,6 @@ body {
   color: #ffffff;
   text-transform: uppercase;
   text-decoration: none;
-
   background-color: #000000;
   border: none;
   outline: none;
@@ -350,7 +334,6 @@ body {
 .gallery-content {
   height: 164px;
   margin: 0;
-
   background-color: #cccccc;
   border: 7px solid #ffffff;
 }
@@ -363,7 +346,6 @@ body {
 .gallery .btn {
   position: absolute;
   bottom: 0;
-
   width: 140px;
   margin: 0;
 }
@@ -382,13 +364,11 @@ body {
   margin-right: 20px;
   margin-bottom: 20px;
   padding: 7px 15px;
-
   font-size: 14px;
   line-height: 24px;
   font-family: "PT Sans Narrow", "Arial", sans-serif;
   color: #000000;
   text-transform: uppercase;
-
   background-color: #f9f6f3;
   border: 2px solid #000000;
   outline: none;
@@ -411,10 +391,11 @@ body {
   margin-top: 65px;
   padding-top: 60px;
   padding-bottom: 40px;
-
-  color: #ffffff; /* лучше явно прописать везде для футера */
-
+  color: #ffffff;
   background: #252525 url("../img/pattern-black.jpg");
+}
+
+.second-page .main-footer {
   box-shadow: inset 0 10px 30px 0 #000000;
 }
 
@@ -435,7 +416,6 @@ body {
 .footer-social {
   float: left;
   width: 180px;
-
   text-align: center;
 }
 
@@ -454,13 +434,10 @@ body {
   width: 43px;
   height: 43px;
   margin: 0 2px;
-
   font-size: 0;
   vertical-align: top;
   text-decoration: none;
-
   background: #000000 url("../img/sprite.png") no-repeat center;
-
   transition:
     background-position 0.5s,
     background-color 0.5s;
@@ -497,7 +474,6 @@ body {
 .footer-copyright p {
   margin: 0;
   margin-bottom: 15px;
-
   text-align: center;
 }
 
@@ -507,7 +483,6 @@ body {
 
 .footer-copyright .btn:hover {
   color: #000000;
-
   background-color: #ffffff;
 }
 
@@ -521,18 +496,12 @@ body {
   color: #000000;
   font-weight: bold;
   font-family: "PT Sans Narrow", Arial, Helvetica, sans-serif;
-
-  /* Только для оформления сетки */
-  outline: 2px solid red;
 }
 
 .breadcrumbs{
   margin-bottom: 40px;
   padding: 0;
   font-size: 0;
-
-  /* Только для оформления сетки */
-  outline: 2px solid yellow;
 }
 
 .breadcrumbs li {
@@ -565,9 +534,6 @@ body {
 .shop-content-left {
   width: 220px;
   float: left;
-
-  /* Только для оформления сетки */
-  outline: 2px solid blue;
 }
 
 .filter {
@@ -577,9 +543,6 @@ body {
   font-size: 14px;
   line-height: 24px;
   color: #000000;
-
-  /* Только для оформления сетки */
-  outline: 2px solid red;
 }
 
 .filter li {
@@ -587,9 +550,6 @@ body {
   padding-left: 43px;
   padding-right: 10px;
   list-style: none;
-
-  /* Только для оформления сетки */
-  outline: 2px solid green;
 }
 
 .filter input {
@@ -605,10 +565,6 @@ body {
   width: 700px;
   float: right;
   padding-top: 8px;
-
-  /* Только для оформления сетки */
-  outline: 2px solid blue;
-
 }
 
 .mini-title {
@@ -619,9 +575,6 @@ body {
   color: #000000;
   font-weight: bold;
   font-family: "PT Sans Narrow", Arial, Helvetica, sans-serif;
-
-  /* Только для оформления сетки */
-  outline: 2px solid yellow;
 }
 
 .products {
@@ -637,11 +590,8 @@ body {
   margin-bottom: 20px;
 
   font-size: 14px;
-  box-shadow: 0 0 20px 0 grey;
-
-  /* Только для оформления сетки */
-  outline: 2px solid red;
-
+  box-shadow: 0 0 15px 0 rgba(0, 1, 1, 0.2);
+  background-color: #ffffff;
 }
 
 .item:nth-child(3n) {
@@ -672,9 +622,6 @@ body {
   margin-left: 16px;
   margin-right: 16px;
   margin-bottom: 16px;
-
-  /* Только для оформления сетки */
-  outline: 2px solid magenta;
 }
 
 .price {
@@ -686,9 +633,6 @@ body {
   line-height: 24px;
   color: #000000;
   background-color: #e5e5e5;
-
-  /* Только для оформления сетки */
-  outline: 2px solid yellow;
 }
 
 .buy .btn {
@@ -700,8 +644,6 @@ body {
 .pages {
   padding: 0;
   margin: 0;
-  /* Только для оформления сетки */
-  outline: 2px solid yellow;
 }
 
 .page {
@@ -711,9 +653,6 @@ body {
   list-style: none;
   text-align: center;
   background-color: #000000;
-
-  /* Только для оформления сетки */
-  outline: 2px solid red;
 }
 
 .page a {
@@ -737,26 +676,15 @@ body {
 
 /*!!!!!!!!!!!!!!!!!!!!!barbershop-item.html!!!!!!!!!!!!!!!!*/
 
-.content {
-  /* Только для оформления сетки */
-  outline: 2px solid red;
-}
-
 .photos {
   float: left;
   width: 460px;
   padding-top: 8px;
-
-  /* Только для оформления сетки */
-  outline: 2px solid blue;
 }
 
 .photo {
   display: block;
-  box-shadow: 0 0 20px 0 grey;
-
-  /* Только для оформления сетки */
-  outline: 2px solid yellow;
+  box-shadow: 0 0 15px 0 rgba(0, 1, 1, 0.2);
 }
 
 .mini {
@@ -774,25 +702,15 @@ body {
   float: right;
   width: 390px;
   padding-top: 8px;
-
-
-  /* Только для оформления сетки */
-  outline: 2px solid blue;
 }
 
 .product-info {
   margin-bottom: 63px;
-
-  /* Только для оформления сетки */
-  outline: 2px solid yellow;
 }
 
 .availability {
 padding-top: 19px;
 margin-bottom: 28px;
-
-  /* Только для оформления сетки */
-  outline: 2px solid red;
 }
 
 .description .left {
@@ -800,9 +718,6 @@ margin-bottom: 28px;
   padding: 0;
   margin: 0;
   color: #000000;
-
-  /* Только для оформления сетки */
-  outline: 2px solid yellow;
 }
 
 .description .right {
@@ -811,9 +726,6 @@ margin-bottom: 28px;
   padding-right: 10px;
   margin: 0;
   color: #aeaeae;
-
-  /* Только для оформления сетки */
-  outline: 2px solid yellow;
 }
 
 .product-info > p {
